paas/dayzero/automation/Terraform/02.OCP/my_resources/various-yaml-scripts/argomgd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-file-integrity
  labels:
    argocd.argoproj.io/managed-by: "openshift-operators"
  annotations:
    openshift.io/display-name: 'openshift-file-integrity'
