paas/dayzero/automation/Terraform/02.OCP/my_resources/various-yaml-scripts/1.post_Terraform_create_route_ASDK.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gitea-with-admin
  namespace: dso-gitea
  labels:
    app: gitea-with-admin
spec:
  host: gitea-with-admin-dso-gitea.apps.ocp1.ocp.local
  to:
    kind: Service
    name: gitea-with-admin
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
